<resources>
    <string name="app_name">PomacAssignment</string>
    <string name="new_york_times">New York Times</string>
    <string name="articles">articles</string>
    <string name="shadow">shadow</string>
    <string name="article_thumbnail">article thumbnail</string>
    <string name="back">back</string>
    <string name="an_error_occurred_please_try_again">An error occurred please try again!</string>
    <string name="refresh">refresh</string>
</resources>
